--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -3,14 +3,14 @@ $main-color2: rgb(120, 118, 120);
 
 $text-color: #fff;
 
-html,body{
-    padding: 0;
+    html,body{
     margin: 0;
+    padding: 0;
     box-sizing: border-box;
     font-family: "Montserrat";
-    background: #111010;
     color: $text-color;
     animation: ref 1s linear;
+    color: #000;
 }
 
 
