--- a/src/styles/about.scss
+++ b/src/styles/about.scss
@@ -107,45 +107,17 @@ $grey: #e2e0e0;
     } 
   }
   .socials{
-    font-size: 22px;
+    font-size: 20px;
     display: flex;
     justify-content: center;
     margin-bottom: 20px;
-    .icn1{
+    .social{
       margin: 0 10px;
-      animation: anim-socials1 1.5s 0.1s linear infinite ;
+      transition: all 0.4s;
       &:hover{
-        color: #fff;
         cursor: pointer;
-        animation: step-end;
-      }
-    }
-    .icn2{
-      margin: 0 10px;
-      animation: anim-socials2 1.5s 0.2s linear infinite ;
-      &:hover{
-        color: #fff;
-        cursor: pointer;
-        animation: step-end;
-      }
-    }
-    .icn3{
-      margin: 0 10px;
-      animation: anim-socials3 1.5s 0.3s linear infinite ;
-
-      &:hover{
-        color: #fff;
-        cursor: pointer;
-        animation: step-end;
-      }
-    }
-    .icn4{
-      margin: 0 10px;
-      animation: anim-socials4 1.5s 0.4s linear infinite ;
-      &:hover{
-        color: #fff;
-        cursor: pointer;
-        animation: step-end;
+        color: #858585;
+        transition: all 0.4s;
       }
     }
   }
@@ -183,29 +155,6 @@ $grey: #e2e0e0;
         right: 0;
         height: 100%;
         width: 300px;
-          .xmark-1{
-            width: 45px;
-            margin-top: 50px;
-            margin-left: 220px;
-            border-bottom: 2px solid #fff;
-            position: absolute;
-            rotate: -45deg;
-            &:hover{
-              cursor: pointer;
-            }
-          }
-          .xmark-2{
-            width: 45px;
-            margin-top: 50px;
-            margin-left: 220px;
-            border-bottom: 2px solid #fff;
-            rotate: 45deg;
-            &:hover{
-              cursor: pointer;
-            }
-          }
-          
-       
         .btn{
           margin-top: 20px;
           margin-left: 220px;
@@ -272,65 +221,10 @@ $grey: #e2e0e0;
     padding-top: 50px;
     margin: 0;
   }
-  .banner{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background: #34291f;
-    width: 100%;
-    height: 300px;
-    color: #fff;
-    div{
-      margin: 0 50px;
-      h1{
-        font-size: 40px;
-      }
-      p{
-       font-family: "Montserrat";;
-       font-size: 13px;
-      }
-    }
-  }
-}
-
-.footer{
-  display: flex;
-  justify-content: center;
-  font-size: 10px;
-  p{
-    color: #999;
-  }
 }
 
 
 
-
-
-@keyframes anim-socials1{
-  to{
-    color: #000;
-    opacity: 0.2;
-  }
-}
-@keyframes anim-socials2{
-  to{
-    color: #000;
-    opacity: 0.2;
-
-  }
-}
-@keyframes anim-socials3{
-  to{
-    color: #000;
-    opacity: 0.2;
-  }
-}
-@keyframes anim-socials4{
-  to{
-    color: #000;
-    opacity: 0.2;
-  }
-}
 
 
 
