--- a/src/styles/section.scss
+++ b/src/styles/section.scss
@@ -17,3 +17,16 @@
       }
     }
   }
+  .component-3{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    font-family: 'Source Code Pro', monospace;
+    .design{
+      font-family: 'Roboto', sans-serif;
+      letter-spacing: 2px;
+      color: #333;
+      padding-top: 50px;
+    }
+  }
