--- a/src/styles/about.scss
+++ b/src/styles/about.scss
@@ -98,7 +98,7 @@ $grey: #e2e0e0;
       margin-left: 100px;
       li{
         list-style: none;
-        a{
+        .Link{
           margin: 0 10px;
           text-decoration: none;
           color: #111;
@@ -172,7 +172,7 @@ $grey: #e2e0e0;
     .open-window{
       width: 100%;
       height: 300px;
-      position: absolute;
+      position: fixed;
       top: 0;
       left: 0;
       background: #000;
@@ -185,8 +185,33 @@ $grey: #e2e0e0;
         flex-direction: column;
         justify-content: center;
         align-items: center;
+        text-decoration: none;
         li{
-
+          text-decoration: none;
+          margin: 10px 0;
+          a{
+            color: #fff;
+            text-decoration: none;
+            font-size: 20px;
+            display: flex;
+            align-items: center;
+            transition: .4s;
+            &:hover{
+              color: #999;
+              transition: .4s;
+            }
+            &::before{
+              content: '';
+              margin-right: 10px;
+              display: inline-block;
+              height: 10px;
+              width: 40px;
+              background-image: url('../img/right-arrowWhite.png');
+              background-size: cover;
+              background-position: center;
+              background-repeat: no-repeat;
+            }
+          }
         }
       }
       .xmark-open-window{
@@ -283,6 +308,7 @@ $grey: #e2e0e0;
             text-decoration: none;
             color: #888;
             transition: 0.4s;
+            cursor:text;
             &:hover{
                 color: #fff;
                 transition: 0.4s;
@@ -465,8 +491,8 @@ $grey: #e2e0e0;
       }
       .open-window{
         width: 100%;
-        height: 300px;
-        position: absolute;
+        height: 200px;
+        position: fixed;
         top: 0;
         left: 0;
         background: #000;
@@ -475,21 +501,38 @@ $grey: #e2e0e0;
         color: #fff;
         display: flex;
         ul{
-          display: flex;
-          flex-direction: column;
-          justify-content: center;
-          align-items: center;
           li{
-  
+            margin: 5px 0;
+            a{
+              font-size: 18px;
+              display: flex;
+              align-items: center;
+              transition: .4s;
+              &:hover{
+                color: #999;
+                transition: .4s;
+              }
+              &::before{
+                content: '';
+                margin-right: 10px;
+                display: inline-block;
+                height: 10px;
+                width: 40px;
+                background-image: url('../img/right-arrowWhite.png');
+                background-size: cover;
+                background-position: center;
+                background-repeat: no-repeat;
+              }
+            }
           }
         }
         .xmark-open-window{
-          width: 30px;
+          width: 20px;
           position: absolute;
           top: 0;
           right: 0;
-          top: 50px;
-          margin-right: 50px;
+          top: 40px;
+          margin-right: 40px;
           cursor: pointer;
         }
       }
@@ -743,8 +786,8 @@ $grey: #e2e0e0;
       }
       .open-window{
         width: 100%;
-        height: 300px;
-        position: absolute;
+        height: 150px;
+        position: fixed;
         top: 0;
         left: 0;
         background: #000;
@@ -753,21 +796,39 @@ $grey: #e2e0e0;
         color: #fff;
         display: flex;
         ul{
-          display: flex;
-          flex-direction: column;
-          justify-content: center;
-          align-items: center;
+          font-size: 10px;
           li{
-  
+            margin: 5px 0;
+            a{
+              font-size: 15px;
+              display: flex;
+              align-items: center;
+              transition: .4s;
+              &:hover{
+                color: #999;
+                transition: .4s;
+              }
+              &::before{
+                content: '';
+                margin-right: 10px;
+                display: inline-block;
+                height: 10px;
+                width: 30px;
+                background-image: url('../img/right-arrowWhite.png');
+                background-size: cover;
+                background-position: center;
+                background-repeat: no-repeat;
+              }
+            }
           }
         }
         .xmark-open-window{
-          width: 20px;
+          width: 15px;
           position: absolute;
           top: 0;
           right: 0;
-          top: 50px;
-          margin-right: 50px;
+          top: 30px;
+          margin-right: 30px;
           cursor: pointer;
         }
       }
