--- a/src/styles/contact.scss
+++ b/src/styles/contact.scss
@@ -1,18 +1,38 @@
 .contact-header{
     width: 100%;
-    display: flex;
-    border-bottom: 1px solid #000;
+    padding: 50px 0;
+    background: #111;
+    img{
+        width: 70px;
+        margin-right: 150px;
+    }
+   
     .space{
-        width: 100%;
         display: flex;
         align-items: center;
-        justify-content: space-around;
+        justify-content: center;
+        .navbar{
+            margin-right: 500px;
+            display: flex;
+        }
     }
-    div{
-        display: flex;
-        margin-top: 60px;
-        input{
-            outline: none;
+        .Log-in{
+                padding: 10px 20px;
+                border-radius: 50px;
+                border: none;
+                border: 2px solid #fff;
+                color: #fff;
+                background: transparent;
+                box-shadow: 1px 1px 8px #fff ;
+                font-size: 18px;
+                transition: .4s;
+                cursor: pointer;
+                letter-spacing: 2px;
+                &:hover{
+                    background: #fff;
+                    color: #000;
+                    transition: .4s;
+                }
         }
         li{
             list-style: none;
@@ -20,10 +40,15 @@
                 margin: 0 10px;
                 text-decoration: none;
                 font-size: 15px;
-                color: #000;
+                color: #fff;
+                transition: .4s;
+                text-transform: uppercase;
+                &:hover{
+                    color: #999;
+                    transition: .4s;
+                }
             }
         }
-    }
 }
 
 .help{
@@ -36,6 +61,11 @@
     h5{
         color: #585757;
     }
+    .text{
+        font-size: 16px;
+        max-width: 500px;
+        
+    }
     .chat-bot{
         max-width: 500px;
         p{
@@ -44,6 +74,7 @@
             font-size: 13px;
         }
         button{
+            margin-top: 50px;
             padding:  10px 15px;
             background: transparent;
             border: 1px solid #000;
@@ -62,6 +93,23 @@
     justify-content: center;
     flex-direction: column;
     align-items: center;
+    input{
+        border: none;
+        outline: none;
+        background: transparent;
+        border-bottom: 1px solid #c7c7c7;
+        margin: 30px 0;
+        width: 275px;
+    }
+    li{
+        list-style: none;
+        font-size: 25px;
+        margin-top: 20px;
+        margin-bottom: 20px;
+    }
+    p{
+        font-size: 10px;
+    }
     .sub{
         padding: 10px 0;
         width: 280px;
@@ -71,6 +119,256 @@
         &:hover{
             opacity: 0.6;
             cursor: pointer;
+        }
+    }
+}
+
+
+
+
+
+
+///////////////////////////////////////////////
+
+
+@media screen and (max-width: 1060px){
+    .contact-header{
+        width: 100%;
+        padding: 50px 0;
+        background: #111;
+        img{
+            width: 70px;
+            margin-right: 70px;
+        }
+       
+        .space{
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            .navbar{
+                margin-right: 50px;
+                display: flex;
+            }
+        }
+            .Log-in{
+                    padding:  10px;
+                    border-radius: 50px;
+                    border: none;
+                    border: 2px solid #fff;
+                    color: #fff;
+                    background: transparent;
+                    box-shadow: 1px 1px 8px #fff ;
+                    font-size: 15px;
+                    transition: .4s;
+                    cursor: pointer;
+                    letter-spacing: 2px;
+                    &:hover{
+                        background: #fff;
+                        color: #000;
+                        transition: .4s;
+                    }
+            }
+            li{
+                list-style: none;
+                a{
+                    margin: 0 10px;
+                    text-decoration: none;
+                    font-size: 12px;
+                    color: #fff;
+                    transition: .4s;
+                    text-transform: uppercase;
+                    &:hover{
+                        color: #999;
+                        transition: .4s;
+                    }
+                }
+            }
+    }
+    
+    .help{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        font-size: 14px;
+        height: 100vh;
+        h5{
+            color: #585757;
+        }
+        .text{
+            font-size: 14px;
+            max-width: 400px;
+            margin-top: 50px;
+            margin-bottom: -100px;
+        }
+        .chat-bot{
+            max-width: 400px;
+            p{
+                word-spacing: 3px;
+                line-height: 22px;
+                font-size: 11px;
+            }
+            button{
+                padding:  10px 15px;
+                background: transparent;
+                border: 1px solid #000;
+                &:hover{
+                    border-color: #9e9e9e;
+                    cursor: pointer;
+                }
+            }
+          
+        }
+    }
+    .Receive-exclusive{
+        border-top: 1px solid #c7c7c7;
+        width: 100%;
+        input{
+            border: none;
+            outline: none;
+            background: transparent;
+            border-bottom: 1px solid #c7c7c7;
+            margin: 30px 0;
+            width: 275px;
+        }
+        .sub{
+            padding: 10px 0;
+            width: 280px;
+            background: #000;
+            color: #fff;
+            border: none;
+            &:hover{
+                opacity: 0.6;
+                cursor: pointer;
+            }
+        }
+    }
+}
+
+
+
+
+@media screen and (max-width: 560px){
+    .contact-header{
+        width: 100%;
+        padding: 20px 0;
+        background: #111;
+        img{
+            width: 30px;
+            margin-right: 0;
+        }
+       
+        .space{
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            .navbar{
+                margin-right: 10px;
+                display: flex;
+            }
+        }
+            .Log-in{
+                    padding:   4px 8px;
+                    border-radius: 10px;
+                    border: none;
+                    border: 2px solid #fff;
+                    color: #fff;
+                    background: transparent;
+                    box-shadow: 1px 1px 8px #fff ;
+                    font-size: 8px;
+                    transition: .4s;
+                    cursor: pointer;
+                    letter-spacing: 0;
+                    &:hover{
+                        background: #fff;
+                        color: #000;
+                        transition: .4s;
+                    }
+            }
+            li{
+                list-style: none;
+                a{
+                    margin: 0 8px;
+                    text-decoration: none;
+                    font-size: 8px;
+                    color: #fff;
+                    transition: .4s;
+                    text-transform: uppercase;
+                    &:hover{
+                        color: #999;
+                        transition: .4s;
+                    }
+                }
+            }
+    }
+    
+    .help{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        font-size: 14px;
+        height: 100vh;
+        margin-top: -100px;
+        h5{
+            color: #585757;
+        }
+        .text{
+            font-size: 10px;
+            max-width: 200px;
+            margin-top: 50px;
+            margin-bottom: -100px;
+        }
+        .chat-bot{
+            max-width: 200px;
+    
+            p{
+                word-spacing: 2px;
+                line-height: 20px;
+                font-size: 10px;
+            }
+            button{
+                padding:  5px 10px;
+                background: transparent;
+                border: 1px solid #000;
+                &:hover{
+                    border-color: #9e9e9e;
+                    cursor: pointer;
+                }
+            }
+          
+        }
+    }
+    .Receive-exclusive{
+        border-top: 1px solid #c7c7c7;
+        width: 100%;
+        h5{
+            font-size: 10px;
+        }
+        input{
+            border: none;
+            outline: none;
+            background: transparent;
+            border-bottom: 1px solid #c7c7c7;
+            margin: 30px 0;
+            width: 240px;
+        }
+        .sub{
+            padding: 10px 0;
+            width: 240px;
+            background: #000;
+            color: #fff;
+            border: none;
+            &:hover{
+                opacity: 0.6;
+                cursor: pointer;
+            }
+        }
+        li{
+            font-size: 15px;
+        }
+        p{
+            font-size: 6px;
         }
     }
 }
